# Ferdy

./: .gitignore  Cargo.toml  Ferdy.html  README.md  config.yaml  dakia-text-patterns.md  dakia.code-workspace  dakia.yaml  info.md  nginx.conf  todo
dakia/: Cargo.toml  build.rs
dakia/src/: main.rs
dakia/src/config/: args.rs  dakia.rs  dakia_config.rs  filter.rs  mod.rs  upstream.rs
dakia/src/config/source_config/: downstream_config.rs  gateway_config.rs  inet_address.rs  interceptor_config.rs  mod.rs  router_config.rs  source_dakia_config.rs  upstream_config.rs
dakia/src/error/: immut_str.rs  mod.rs  result.rs
dakia/src/gateway/: mod.rs  state.rs  todo
dakia/src/gateway/filter/: builder.rs  executor.rs  mod.rs  operator.rs  query2filter.rs
dakia/src/gateway/interceptor/: builder.rs  executor.rs  hook.rs  insertceptor_name.rs  interceptor.rs  mod.rs  phase.rs
dakia/src/gateway/interceptor_builder/: mod.rs  utils.rs
dakia/src/gateway/interceptors/: mod.rs  version.rs
dakia/src/gateway/interceptors/basic_auth/: builder.rs  interceptor.rs  mod.rs
dakia/src/gateway/interceptors/controller/: builder.rs  interceptor.rs  mod.rs
dakia/src/gateway/interceptors/rate_limiter/: builder.rs  interceptor.rs
dakia/src/gateway/interceptors/request_id/: builder.rs  interceptor.rs  mod.rs
dakia/src/gateway/interceptors/request_rewrite/: builder.rs  interceptor.rs  mod.rs  rewrite_parts.rs
dakia/src/gateway/interceptors/response_rewrite/: builder.rs  interceptor.rs  mod.rs  rewrite_parts.rs
dakia/src/gateway/interceptors/server/: builder.rs  interceptor.rs  mod.rs
dakia/src/gateway/interceptors/use_file/: builder.rs  (+2 more)
dakia/src/globals/: config_store.rs  mod.rs  pattern_registry.rs  regex_registry.rs
dakia/src/libs/: mod.rs  utils.rs
dakia/src/proxy/http/: builder.rs  ctx.rs  helpers.rs  http_proxyx.rs  lb.rs  mod.rs  proxy.rs  session.rs
dakia/src/qe/: engine.rs  query.rs
dakia/src/shared/: common.rs  config_store.rs  dakia_state.rs  into.rs  mod.rs  mutable_registry.rs  pattern_matcher.rs  pattern_registry.rs  registry.rs
gateway/: Cargo.toml
gateway/src/: main.rs
gateway/src/gate_way/http/: filter.rs  mod.rs
gateway/src/libs/: pingora.rs
gateway/src/router/http/: ctx.rs  gateway.rs
(+63 files in other folders)
