[package]
name = "dakia"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
async-trait="0.1"
pingora-core = { version = "0.3.0"}
pingora-proxy = { version = "0.3.0"}
pingora-http = { version = "0.3.0"}
env_logger = "0.9"
pingora = { version = "0.3.0", features = [ "lb" ] }

[dev-dependencies]
clap = { version = "3.2.25", features = ["derive"] }
log = "0.4"