[package]
name = "dakia"
version = "0.1.1"
edition = "2021"
authors = ["Rahul Kumar"]
description = "Dakia is a powerful and flexible API Gateway designed for modern web applications"
license = "MIT"
repository = "https://github.com/ats1999/dakia"
documentation = "https://github.com/ats1999/dakia"


[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
env_logger = "0.9"
pingora-core = { version = "0.4.0" }
pingora-proxy = { version = "0.4.0" }
pingora-http = { version = "0.4.0" }
pingora = { version = "0.4.0", features = ["lb"] }
clap = { version = "3.2.25", features = ["derive"] }
serde_yaml = "0.9.34"
serde = "1.0.216"
wildmatch = "2.4.0"
log = "0.4"
bytes = "1.0"
http = "1.0.0"
arc-swap = "1.7.1"
once_cell = "1.20.2"
dashmap = "6.1.0"
crossbeam-epoch = "0.9.18"
rand = "0.8.5"
pcre2 = "0.2.9"
base64 = "0.22.1"
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4"] }
[build-dependencies]
figlet-rs = "0.1.5"
